# eos-shell-content

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  content.csv  content_to_csv.py  csv_to_content.py  desktop_object.py  download-content  extra_categories.py  extra_desktop_entries.py  generate_desktop_files.py  localized-apps.txt  renamed-apps.txt  report-product-apps  report-product-packages  translate_desktop_files.py  unzip_content.py  update_translation_info.py  upload-to-s3  web-apps.txt
.tx/: config
acknowledgements/image-attributions/: app-icons.csv  app-thumbs.csv  link-thumbs.csv  readme.txt
bundle/: translations.json
bundle/desktops/:  com.endlessm.yan_news.vi.desktop  (+666 more)
content/: .gitignore  Makefile.am  folders.json
content/Default/apps/: content.json
content/Default/links/: Brazil.json  C.json  Global.json  Guatemala.json  Haiti.json  Positivo.json  Spanish.json  bn.json  content.json  default.json  es.json  es_GT.json  es_MX.json  id.json  pt_BR.json  th.json  vi.json  zh_CN.json
data/: Makefile.am  eos-desktop-substitutions.ini  eos-save-icon-grid.in  eos-select-app-server  eos-select-app-server.in  eos-select-personality.in
data/applications/: eos-app-KGoldrunner.desktop  eos-app-armagetron.desktop  eos-app-atanks.desktop  eos-app-audacity.desktop  eos-app-billard-gl.desktop  eos-app-blockout2.desktop  eos-app-bovo.desktop  eos-app-brasero.desktop  eos-app-btanks.desktop  eos-app-cheese.desktop  eos-app-chromium-browser.desktop  eos-app-chromium-bsu.desktop  eos-app-com.endlessm.brazil.desktop  eos-app-com.endlessm.celebrities.desktop  eos-app-com.endlessm.cooking.desktop  eos-app-com.endlessm.encyclopedia.desktop  eos-app-com.endlessm.endless-english.desktop  eos-app-com.endlessm.endless-photos.desktop  eos-app-com.endlessm.endless-resume-app.desktop  eos-app-com.endlessm.endless-translation.desktop  eos-app-com.endlessm.endless-weather.desktop  eos-app-com.endlessm.english.desktop  eos-app-com.endlessm.fitness.desktop  eos-app-com.endlessm.futbol.desktop  eos-app-com.endlessm.guatemala.desktop  eos-app-com.endlessm.health.desktop  eos-app-com.endlessm.khanacademy.desktop  eos-app-com.endlessm.mexico.desktop  eos-app-com.endlessm.photos.desktop  eos-app-com.endlessm.programming.desktop  eos-app-com.endlessm.resume.desktop  eos-app-com.endlessm.science.desktop  eos-app-com.endlessm.translation.desktop  eos-app-com.endlessm.travel.desktop  eos-app-com.endlessm.typing.desktop  eos-app-com.endlessm.weather.desktop  eos-app-com.endlessm.wikipedia.desktop  eos-app-com.endlessm.youtube.desktop  eos-app-empathy.desktop  eos-app-eos-file-manager.desktop  (+92 more)
data/folders/: eos-folder-art-design.directory  eos-folder-art.directory  eos-folder-coding-education.directory  eos-folder-create-media.directory  eos-folder-create.directory  eos-folder-curiosity.directory  eos-folder-design.directory  eos-folder-educational-game.directory  eos-folder-encyclopedias.directory  eos-folder-entertainment.directory  eos-folder-games-to-hack.directory  eos-folder-games.directory  eos-folder-geography.directory  eos-folder-health.directory  eos-folder-learn-to-code.directory  eos-folder-libreoffice.directory  eos-folder-math.directory  eos-folder-media.directory  eos-folder-multimedia.directory  eos-folder-news.directory  eos-folder-play.directory  eos-folder-productivity.directory  eos-folder-read.directory  eos-folder-social.directory  eos-folder-tools.directory  eos-folder-utilities.directory  eos-folder-work.directory
data/links/: eos-link-037hd.desktop  eos-link-21cineplex.desktop  eos-link-24h.desktop  eos-link-7leopold7.desktop  eos-link-aboutcom.desktop  eos-link-abril.desktop  eos-link-acciontrabajo.desktop  eos-link-adorocinema.desktop  eos-link-afroreggae.desktop  eos-link-agrinewsbd.desktop  eos-link-aisbd.desktop  eos-link-amarblog.desktop  eos-link-angrybirds.desktop  eos-link-arah.desktop  eos-link-arena.desktop  eos-link-aroundantigua.desktop  eos-link-asboasnovas.desktop  eos-link-badmintonasia.desktop  eos-link-baidudict.desktop  eos-link-baidueducation.desktop  eos-link-baiduencyclopedia.desktop  eos-link-baidumusic.desktop  eos-link-baidunews.desktop  eos-link-bandnews.desktop  eos-link-bangladeshportal.desktop  eos-link-banglanews.desktop  eos-link-banglatribune.desktop  eos-link-baomoi.desktop  eos-link-barca.desktop  eos-link-bbc.desktop  eos-link-bdhealth.desktop  eos-link-bdnews.desktop  eos-link-bikroy.desktop  eos-link-bilutv.desktop  eos-link-bingdict.desktop  eos-link-bodyboard.desktop  eos-link-bola.desktop  eos-link-bolanascostas.desktop  eos-link-bookbox.desktop  eos-link-botafogo.desktop  (+378 more)
data/settings/: arch-blacklist.json  icon-grid-Arabic.json  icon-grid-Brazil.json  icon-grid-C.json  icon-grid-C.json.in  icon-grid-Global.json  icon-grid-Guatemala.json  icon-grid-Haiti.json  icon-grid-Positivo.json  icon-grid-Spanish.json  icon-grid-Syria.json  icon-grid-ar.json  icon-grid-ar.json.in  icon-grid-bn.json  icon-grid-bn.json.in  icon-grid-default.json  icon-grid-en.json  icon-grid-es.json  icon-grid-es.json.in  icon-grid-es_GT.json  icon-grid-es_GT.json.in  icon-grid-fr.json  icon-grid-fr.json.in  icon-grid-id.json  icon-grid-id.json.in  icon-grid-pt.json  icon-grid-pt.json.in  icon-grid-th.json  icon-grid-th.json.in  icon-grid-vi.json.in  icon-grid-zh_CN.json.in  validate-grid-json.py  write-grid-json.py
debian/: .gitignore  changelog  control  eos-acknowledgements.install  eos-shell-content-dev.install  eos-shell-content-icon-grid.install  eos-shell-content.install
icons/: Makefile.am
image-attributions/: app-thumbs.csv  link-icons.csv
po/: Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  eos-shell-content.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  (+80 more)
tools/: .gitignore  Makefile.am  dh_eoscontent  eos-content-merge  eoscontent.mk  eoscontent.pm  eosshellcontent.py  extract-content-strings.c
(+12 files in other folders)
