NULL =
EXTRA_DIST =
CLEANFILES =
DISTCLEANFILES =

# extract-content-strings is a small utility that runs on the build system
noinst_PROGRAMS = \
	extract-content-strings \
	$(NULL)
extract_content_strings_CFLAGS = \
	$(EOS_SHELL_CONTENT_CFLAGS) \
	$(MAINTAINER_CFLAGS) \
	$(NULL)
extract_content_strings_LDADD = \
	$(EOS_SHELL_CONTENT_LIBS) \
	$(NULL)
